solve swiper bug pagination

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           <a href="#"><small>Write a review</small></a>
           </div>
           <div class="miniature-image">
-            <button><img src="/img/tshirt.webp" alt="black t-shirt"/></button>
-            <button><img src="/img/tshirt.webp" alt="white t-shirt"/></button>
+            <button class="select-color"><img src="/img/tshirt.webp" alt="black t-shirt"/></button>
+            <button class="select-color"><img src="/img/tshirt.webp" alt="white t-shirt"/></button>
           </div>
           <div class="size-guide">
             <button data-size="xs">xs</button>
@@ -82,7 +82,7 @@
           </div>
           <div class="size-info"></div>
           <div class="add-to-cart">
-            <button class="cart">Add</button>
+            <button class="add-to-cart">Add</button>
           </div>
 
         </div>
