add class active to size btn

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             <button data-size="xl">xl</button>
           </div>
           <div class="size-info"></div>
+          <label></label>
           <div class="add-to-cart">
             <button class="add-to-cart">Add</button>
           </div>
