commenti logica productInfo

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           <a href="#"><small>Write a review</small></a>
           </div>
           <div class="miniature-image">
-            <button class="select-color"><img src="/img/tshirt.webp" alt="black t-shirt"/></button>
-            <button class="select-color"><img src="/img/tshirt.webp" alt="white t-shirt"/></button>
+            <button class="select-color" data-color="black"><img src="/img/tshirt.webp" alt="black t-shirt"/></button>
+            <button class="select-color" data-color="white"><img src="/img/tshirt.webp" alt="white t-shirt"/></button>
           </div>
           <div class="size-guide">
             <button data-size="xs">xs</button>
