clean code to add to cart & add file product.json

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
           <div class="details">
           <h3>gymshark men</h3>
           <h2>compound zip hoodie</h2>
-          <span class="price">$55.00 usd</span> <br>
+          <span class="price">€ 55.00</span> <br>
           <span class="pleasure">★★★★☆</span>
           <a href="#"><small>Write a review</small></a>
           </div>
-          <div class="miniature-image">
-            <button class="select-color" data-color="black"><img src="/img/tshirt.webp" alt="black t-shirt"/></button>
-            <button class="select-color" data-color="white"><img src="/img/tshirt.webp" alt="white t-shirt"/></button>
+          <div class="select-color">
+            <button data-color="black">Black<img src="/img/tshirt.webp" alt="black t-shirt"/></button>
+            <button data-color="white">White<img src="/img/tshirt.webp" alt="white t-shirt"/></button>
           </div>
           <div class="size-guide">
             <button data-size="xs">xs</button>
@@ -80,10 +80,10 @@
             <button data-size="l">l</button>
             <button data-size="xl">xl</button>
           </div>
-          <div class="size-info"></div>
+          <div class="size-info"></div><br>
           <label></label>
           <div class="add-to-cart">
-            <button class="add-to-cart">Add</button>
+            <button class="cart">Add</button>
           </div>
 
         </div>
